# occt

./: .gitignore  README.md  index.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: node.js.yml  python-publish.yml
occt/: __init__.py  __main__.py  help.py  states.py
occt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
utils/: cli.js  debug.js  init.js  states.js  utils-info.js
